--- a/fiftyShadesOfPink.css
+++ b/fiftyShadesOfPink.css
@@ -40,6 +40,9 @@ ni-intensity-graph {
       min-height: 20px;
       color: #d2b4b4;
       background-image: url("./examples/peace.png");
+      background-repeat: no-repeat;
+      background-position: 100% 100%;
+}
   }
 
  ni-cartesian-axis {
